// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/Create/DatabaseInfo render DatabaseInfo snap 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            >
              <span
                class="custom-icon-ellipse css-u3jcp4"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#E8F3FF"
                    height="16"
                    rx="3"
                    width="16"
                  />
                  <circle
                    cx="8"
                    cy="8"
                    fill="white"
                    r="3"
                    stroke="#4583FF"
                    stroke-width="2"
                  />
                </svg>
              </span>
              <span>
                数据源
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
      >
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="dataBaseInfo_0_instanceName"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-loading"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceName_list_0"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceName_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceName_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="dataBaseInfo_0_instanceName"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          <span
                            class="custom-select-placeholder css-qly0fu"
                          >
                            <span
                              class="custom-select-placeholder-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-placeholder-value"
                            >
                              请选择{{name}}
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow ant-select-arrow-loading"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class=""
                  for="dataBaseInfo_0_instanceSchema"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceSchema_list_0"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceSchema_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceSchema_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="dataBaseInfo_0_instanceSchema"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          <span
                            class="custom-select-placeholder css-qly0fu"
                          >
                            <span
                              class="custom-select-placeholder-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-placeholder-value"
                            >
                              请选择数据库（选填）
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical data-source-row-divider"
            role="separator"
          />
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                style="width: 36px; height: 36px;"
                type="button"
              >
                <span
                  class="custom-icon css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 16.5H3C2.80109 16.5 2.61032 16.421 2.46967 16.2803C2.32902 16.1397 2.25 15.9489 2.25 15.75V2.25C2.25 2.05109 2.32902 1.86032 2.46967 1.71967C2.61032 1.57902 2.80109 1.5 3 1.5H15C15.1989 1.5 15.3897 1.57902 15.5303 1.71967C15.671 1.86032 15.75 2.05109 15.75 2.25V15.75C15.75 15.9489 15.671 16.1397 15.5303 16.2803C15.3897 16.421 15.1989 16.5 15 16.5ZM6 5.25V6.75H12V5.25H6ZM6 8.25V9.75H12V8.25H6ZM6 11.25V12.75H9.75V11.25H6Z"
                      fill="#4583FF"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        测试数据库连通性
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/Order/Create/DatabaseInfo render action test connect btn 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            >
              <span
                class="custom-icon-ellipse css-u3jcp4"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#E8F3FF"
                    height="16"
                    rx="3"
                    width="16"
                  />
                  <circle
                    cx="8"
                    cy="8"
                    fill="white"
                    r="3"
                    stroke="#4583FF"
                    stroke-width="2"
                  />
                </svg>
              </span>
              <span>
                数据源
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
      >
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="dataBaseInfo_0_instanceName"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-loading"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceName_list_0"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceName_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceName_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="dataBaseInfo_0_instanceName"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          <span
                            class="custom-select-placeholder css-qly0fu"
                          >
                            <span
                              class="custom-select-placeholder-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-placeholder-value"
                            >
                              请选择{{name}}
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow ant-select-arrow-loading"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class=""
                  for="dataBaseInfo_0_instanceSchema"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceSchema_list_0"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceSchema_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceSchema_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="dataBaseInfo_0_instanceSchema"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          <span
                            class="custom-select-placeholder css-qly0fu"
                          >
                            <span
                              class="custom-select-placeholder-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-placeholder-value"
                            >
                              请选择数据库（选填）
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical data-source-row-divider"
            role="separator"
          />
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                style="width: 36px; height: 36px;"
                type="button"
              >
                <span
                  class="custom-icon css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 16.5H3C2.80109 16.5 2.61032 16.421 2.46967 16.2803C2.32902 16.1397 2.25 15.9489 2.25 15.75V2.25C2.25 2.05109 2.32902 1.86032 2.46967 1.71967C2.61032 1.57902 2.80109 1.5 3 1.5H15C15.1989 1.5 15.3897 1.57902 15.5303 1.71967C15.671 1.86032 15.75 2.05109 15.75 2.25V15.75C15.75 15.9489 15.671 16.1397 15.5303 16.2803C15.3897 16.421 15.1989 16.5 15 16.5ZM6 5.25V6.75H12V5.25H6ZM6 8.25V9.75H12V8.25H6ZM6 11.25V12.75H9.75V11.25H6Z"
                      fill="#4583FF"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-loading basic-button-wrapper css-geipcv"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon ant-btn-loading-icon"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span>
                        测试数据库连通性
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/Order/Create/DatabaseInfo render data source select change 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            >
              <span
                class="custom-icon-ellipse css-u3jcp4"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#E8F3FF"
                    height="16"
                    rx="3"
                    width="16"
                  />
                  <circle
                    cx="8"
                    cy="8"
                    fill="white"
                    r="3"
                    stroke="#4583FF"
                    stroke-width="2"
                  />
                </svg>
              </span>
              <span>
                数据源
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
      >
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="dataBaseInfo_0_instanceName"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-focused ant-select-single ant-select-show-arrow ant-select-open"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceName_list_1"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceName_list"
                            aria-expanded="true"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceName_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="dataBaseInfo_0_instanceName"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          <span
                            class="custom-select-placeholder css-qly0fu"
                          >
                            <span
                              class="custom-select-placeholder-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-placeholder-value"
                            >
                              请选择{{name}}
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class=""
                  for="dataBaseInfo_0_instanceSchema"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceSchema_list_0"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceSchema_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceSchema_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="dataBaseInfo_0_instanceSchema"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          <span
                            class="custom-select-placeholder css-qly0fu"
                          >
                            <span
                              class="custom-select-placeholder-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-placeholder-value"
                            >
                              请选择数据库（选填）
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical data-source-row-divider"
            role="separator"
          />
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                style="width: 36px; height: 36px;"
                type="button"
              >
                <span
                  class="custom-icon css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 16.5H3C2.80109 16.5 2.61032 16.421 2.46967 16.2803C2.32902 16.1397 2.25 15.9489 2.25 15.75V2.25C2.25 2.05109 2.32902 1.86032 2.46967 1.71967C2.61032 1.57902 2.80109 1.5 3 1.5H15C15.1989 1.5 15.3897 1.57902 15.5303 1.71967C15.671 1.86032 15.75 2.05109 15.75 2.25V15.75C15.75 15.9489 15.671 16.1397 15.5303 16.2803C15.3897 16.421 15.1989 16.5 15 16.5ZM6 5.25V6.75H12V5.25H6ZM6 8.25V9.75H12V8.25H6ZM6 11.25V12.75H9.75V11.25H6Z"
                      fill="#4583FF"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        测试数据库连通性
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div>
    <div
      class="ant-select-dropdown custom-select-popup-wrapper css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; min-width: 0;"
    >
      <div>
        <span
          class="ant-input-affix-wrapper ant-input-affix-wrapper-focused basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless css-dev-only-do-not-override-6svbnr"
        >
          <input
            class="ant-input ant-input-borderless css-dev-only-do-not-override-6svbnr"
            placeholder="搜索"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-input-clear-icon ant-input-clear-icon-hidden"
              role="button"
              tabindex="-1"
            >
              <span
                class="custom-icon custom-icon-close css-u3jcp4"
                role="img"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </span>
        <div
          class="css-15pnbqu"
        >
          <div
            class="rc-virtual-list"
            style="position: relative;"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height: 256px; overflow-y: auto;"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  id="dataBaseInfo_0_instanceName_list"
                  role="listbox"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    class="ant-select-item ant-select-item-group"
                  >
                    <span
                      class="custom-select-options-group-label"
                    >
                      <div
                        class="css-1uw16ge"
                      >
                        <img
                          alt=""
                        />
                        <span
                          title="MySQL"
                        >
                          MySQL
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped ant-select-item-option-active"
                    id="dataBaseInfo_0_instanceName_list_1"
                    role="option"
                    title="mysql-1(10.186.62.13:33061)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      mysql-1(10.186.62.13:33061)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_2"
                    role="option"
                    title="mysql-2(10.186.62.13:33062)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      mysql-2(10.186.62.13:33062)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_3"
                    role="option"
                    title="xin-test-database(10.186.62.13:33063)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      xin-test-database(10.186.62.13:33063)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_4"
                    role="option"
                    title="mysql-5(139.196.241.182:33061)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      mysql-5(139.196.241.182:33061)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    class="ant-select-item ant-select-item-group"
                  >
                    <span
                      class="custom-select-options-group-label"
                    >
                      <div
                        class="css-1uw16ge"
                      >
                        <img
                          alt=""
                        />
                        <span
                          title="PostgreSQL"
                        >
                          PostgreSQL
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_6"
                    role="option"
                    title="progres-1(10.186.62.13:5432)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      progres-1(10.186.62.13:5432)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Create/DatabaseInfo render data source select change 2`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            >
              <span
                class="custom-icon-ellipse css-u3jcp4"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#E8F3FF"
                    height="16"
                    rx="3"
                    width="16"
                  />
                  <circle
                    cx="8"
                    cy="8"
                    fill="white"
                    r="3"
                    stroke="#4583FF"
                    stroke-width="2"
                  />
                </svg>
              </span>
              <span>
                数据源
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
      >
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="dataBaseInfo_0_instanceName"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-focused ant-select-single ant-select-show-arrow"
                    >
                      <span
                        aria-live="polite"
                        style="width: 0px; height: 0px; position: absolute; overflow: hidden; opacity: 0;"
                      >
                        mysql-1
                      </span>
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceName_list_1"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceName_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceName_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="dataBaseInfo_0_instanceName"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                        >
                          <span
                            class="custom-select-option-content css-vgjuov"
                          >
                            <span
                              class="custom-select-option-content-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                                    fill="#4583FF"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-option-content-label"
                            >
                              mysql-1(10.186.62.13:33061)
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class=""
                  for="dataBaseInfo_0_instanceSchema"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item basic-select-wrapper custom-select-namespace data-source-row-select css-pti5z8 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dataBaseInfo_0_instanceSchema_list_0"
                            aria-autocomplete="list"
                            aria-controls="dataBaseInfo_0_instanceSchema_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dataBaseInfo_0_instanceSchema_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="dataBaseInfo_0_instanceSchema"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          <span
                            class="custom-select-placeholder css-qly0fu"
                          >
                            <span
                              class="custom-select-placeholder-prefix"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                                    fill="#C3C6CD"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="custom-select-placeholder-value"
                            >
                              请选择数据库（选填）
                            </span>
                          </span>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical data-source-row-divider"
            role="separator"
          />
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                style="width: 36px; height: 36px;"
                type="button"
              >
                <span
                  class="custom-icon css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 16.5H3C2.80109 16.5 2.61032 16.421 2.46967 16.2803C2.32902 16.1397 2.25 15.9489 2.25 15.75V2.25C2.25 2.05109 2.32902 1.86032 2.46967 1.71967C2.61032 1.57902 2.80109 1.5 3 1.5H15C15.1989 1.5 15.3897 1.57902 15.5303 1.71967C15.671 1.86032 15.75 2.05109 15.75 2.25V15.75C15.75 15.9489 15.671 16.1397 15.5303 16.2803C15.3897 16.421 15.1989 16.5 15 16.5ZM6 5.25V6.75H12V5.25H6ZM6 8.25V9.75H12V8.25H6ZM6 11.25V12.75H9.75V11.25H6Z"
                      fill="#4583FF"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-start"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        测试数据库连通性
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden custom-select-popup-wrapper css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; padding: 0px; min-width: 0; pointer-events: none;"
    >
      <div>
        <span
          class="ant-input-affix-wrapper ant-input-affix-wrapper-focused basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless ant-input-affix-wrapper-status-success css-dev-only-do-not-override-6svbnr"
        >
          <input
            class="ant-input ant-input-borderless css-dev-only-do-not-override-6svbnr"
            placeholder="搜索"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-input-clear-icon ant-input-clear-icon-hidden"
              role="button"
              tabindex="-1"
            >
              <span
                class="custom-icon custom-icon-close css-u3jcp4"
                role="img"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </span>
        <div
          class="css-15pnbqu"
        >
          <div
            class="rc-virtual-list"
            style="position: relative;"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height: 256px; overflow-y: auto;"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  id="dataBaseInfo_0_instanceName_list"
                  role="listbox"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    class="ant-select-item ant-select-item-group"
                  >
                    <span
                      class="custom-select-options-group-label"
                    >
                      <div
                        class="css-1uw16ge"
                      >
                        <img
                          alt=""
                        />
                        <span
                          title="MySQL"
                        >
                          MySQL
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    aria-selected="true"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped ant-select-item-option-active ant-select-item-option-selected"
                    id="dataBaseInfo_0_instanceName_list_1"
                    role="option"
                    title="mysql-1(10.186.62.13:33061)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      mysql-1(10.186.62.13:33061)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_2"
                    role="option"
                    title="mysql-2(10.186.62.13:33062)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      mysql-2(10.186.62.13:33062)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_3"
                    role="option"
                    title="xin-test-database(10.186.62.13:33063)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      xin-test-database(10.186.62.13:33063)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_4"
                    role="option"
                    title="mysql-5(139.196.241.182:33061)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      mysql-5(139.196.241.182:33061)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    class="ant-select-item ant-select-item-group"
                  >
                    <span
                      class="custom-select-options-group-label"
                    >
                      <div
                        class="css-1uw16ge"
                      >
                        <img
                          alt=""
                        />
                        <span
                          title="PostgreSQL"
                        >
                          PostgreSQL
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                    id="dataBaseInfo_0_instanceName_list_6"
                    role="option"
                    title="progres-1(10.186.62.13:5432)"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      progres-1(10.186.62.13:5432)
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
